# FluidSim

./: .gitignore  LICENSE  README.md  batch_accuracy.py  demo_airfoil.py  demo_prop_sweep.py  demo_rotor.py  demo_stl_flow.py  demo_wing_analytics.py  diag_force.py  diag_transition.py  flow_model.py  fluidsim.py  fluidsim_gui.py  gpu_benchmark.py  lbm2d.py  lbm2d_cuda.py  lbm2d_rotating.py  lbm3d.py  lbm3d_cuda.py  live_viewer.py  live_viewer_3d.py  prop_model.py  pyproject.toml  render_3d.py  render_prop.py  requirements-gpu.txt  stl_import.py  test_orient.py  transition.py  validate_collision.py  validate_cuda.py  validate_cylinder.py  validate_dfg.py  validate_e387.py  validate_prop.py  validate_sphere.py  validate_taylor_couette.py
docs/: OVERVIEW.md  PROP_NOTES.md  VALIDATION.md
