[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsim-rc"
version = "0.1.0"
description = "A free, open-source GPU wind tunnel for the RC community"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Charles Beeman" }]
keywords = ["CFD", "lattice-boltzmann", "GPU", "aerodynamics", "RC", "drone"]
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
# GPU backend + 3D rendering + desktop GUI (NVIDIA). See requirements-gpu.txt.
gpu = ["cupy-cuda12x[ctk]>=14.0", "pyvista>=0.45", "scikit-image>=0.22",
       "PySide6>=6.6", "pyvistaqt>=0.11"]

[project.scripts]
fluidsim = "fluidsim:main"

[project.urls]
Homepage = "https://github.com/ThatButters/FluidSim"

[tool.setuptools]
# Flat layout: the solver, kernels, IO, viewers and CLI are top-level modules.
py-modules = [
    "fluidsim", "fluidsim_gui", "flow_model", "prop_model",
    "lbm2d", "lbm3d", "lbm2d_cuda", "lbm3d_cuda", "lbm2d_rotating",
    "stl_import", "transition",
    "live_viewer", "live_viewer_3d", "render_3d", "render_prop",
    "demo_stl_flow", "demo_rotor", "demo_airfoil", "demo_wing_analytics",
    "demo_prop_sweep", "batch_accuracy", "gpu_benchmark", "validate_prop",
    "test_orient",
]
